[package]
name = "rustvault"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { version = "1",   features = ["full"] }
axum         = { version = "0.7", features = ["macros"] }
axum-extra   = { version = "0.9", features = ["typed-header"] }
tower        = { version = "0.4" }
tower-http   = { version = "0.5", features = ["cors", "trace"] }
sqlx         = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
serde        = { version = "1",   features = ["derive"] }
serde_json   = "1"
argon2       = "0.5"
jsonwebtoken = "9"
totp-rs      = { version = "5",   features = ["gen_secret"] }
aes-gcm      = "0.10"
rand         = "0.8"
hex          = "0.4"
zeroize      = { version = "1",   features = ["derive"] }
x25519-dalek = { version = "2",   features = ["static_secrets"] }
hkdf         = "0.12"
sha2         = "0.10"
uuid         = { version = "1",   features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
thiserror    = "1"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy      = "0.15"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1",   features = ["full", "test-util"] }
